# remedy

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agent/: context.md  decisions.md  plan.md
apps/cli/: main.py
docs/: architecture.md
tests/: test_imports.py  test_llm_planner.py  test_ollama_builder.py  test_ollama_provider.py  test_permissions.py  test_repo_applicator.py  test_runner.py  test_storage.py  test_task_runner.py  test_verifier.py  test_workspace.py
